# agent-app

./: agent_input.json  logs_backup.txt  main.py  package-lock.json  package.json  pyproject.toml  start.py  start.sh  test.py
agent/: filesystem.py  gui_main.py  input.py  interactive_loop.py  loop.py  main.py  runner.py  state.py
agent/codegen/: patch_strategy.py  strategy.py
agent/commands/: base.py  change_directory.py  delete.py  factory.py  generate_code.py  make_directory.py  patch_file.py  run_script.py  validate_component.py  write_file.py
agent/context/: builder.py
agent/llm/: use_llm.py
agent/planner/: scenario.py
agent/prompt/: builder.py  initial_scenario_prompt.py  scenario_prompt_builder.py
agent/validation/: static.py
analyser/: analyser.py  entrypoint.py  main.py  run_analyser.py  scanner.py  tree_parser.py  writer.py
constants/: constants.py
gui/: __init__.py  app.py  debug_cwd_info.py  events.py  main.py  process_manager.py
gui/styles/: app_styles.py
gui/themes/: gruvbox_compatible_theme.py
gui/widgets/: file_content.py  file_view.py  folder_content.py  logs_section.py  logs_section_richlog.py  main_content_panel.py  main_prompt.py  process_footer.py  project_tree.py  prompt_section.py  tab_manager.py  title_status.py
logger/: __init__.py  formatters.py  log_hub.py  log_models.py
logs/: plan_parsed.json  plan_raw_response.txt
orchestrator/: main.py
registry/: README.md  process_cleaner.py  process_manager.py  process_registry.py
synthetiser/: README.md  config.py  knowledge.py  main.py  processor.py  synth_config.json  synthesiser.py  watcher.py
tests/: test_loop.py
