[tool.poetry]
name = "agent-app"
version = "0.1.0"
description = ""
authors = ["gmarcinek <grzegorz.marcinek@gmail.com>"]
packages = [
    { include = "agent" },
    { include = "analyser" },
    { include = "synthetiser" },
    { include = "registry" },
    { include = "logger" },
    { include = "orchestrator" }
]

[tool.poetry.dependencies]
python = "^3.13"
openai = ">=1.79.0,<2.0.0"
pydantic = ">=2.11.4,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
watchdog = "^4.0.0"
textual = {extras = ["syntax"], version = "^3.2.0"}
psutil = "^7.0.0"
pyperclip = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"

[tool.poetry.scripts]
app = "orchestrator.main:main"
agent = "agent.main:main"
analyser = "analyser.main:main"
analyser-watch = "analyser.run_analyser:main"
synthetiser = "synthetiser.main:main"
gui = "gui.main:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"